[project]
name = "miskey"
version = "0.1.0"
description = "A library for converting keys in keyboard layouts"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "mypy",
  "pytest>=9.0.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
packages = ["miskey"]
explicit_package_bases = true
ignore_missing_imports = true
exclude = ['.*_pb2\.py', 'assets']
disable_error_code = "import-untyped"

[tool.ruff]
fix = false
line-length = 100
output-format = "concise"
target-version = "py313"
include = ["miskey/**/*.py", "tests/**/*.py", "pyproject.toml"]
exclude = [".venv", "docs", "examples", "**/*_pb2*.py"]

[tool.ruff.lint]
allowed-confusables = ["’"]
select = ["ALL"]
ignore = [
  "A",
  "ANN",
  "ARG",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E402",
  "E712",
  "EM",
  "FIX",
  "N",
  "PLC",
  "PLR",
  "RSE",
  "RUF001",
  "RUF002",
  "RUF012",
  "ERA",
  "S",
  "SLF",
  "TC006",
  "TD",
  "TRY",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ARG001",
  "ASYNC230",
  "B008",
  "PGH",
  "PLR",
  "RUF059",
]
"conftest.py" = [
  "ARG001",
  "F",
  "PGH",
  "PLR",
]
"__init__.py" = ["F403"]
