[project]
name = "miskey"
version = "0.1.2"
description = "A library for converting keys in keyboard layouts"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "sound-round", email = "yudaev1@gmail.com" },
]
keywords = ["keyboard", "layout", "transliteration"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/sound-round/miskey"
Repository = "https://github.com/sound-round/miskey"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "mypy",
  "pytest>=9.0.2",
  "bump-my-version>=1.2.7",
]

[tool.uv]
package = false

[tool.bumpversion]
current_version = "0.1.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false
allow_dirty = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "uv.lock"
search = "name = \"miskey\"\nversion = \"{current_version}\""
replace = "name = \"miskey\"\nversion = \"{new_version}\""

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
packages = ["miskey"]
explicit_package_bases = true
ignore_missing_imports = true
exclude = ['.*_pb2\.py', 'assets']
disable_error_code = "import-untyped"

[tool.ruff]
fix = false
line-length = 100
output-format = "concise"
target-version = "py313"
include = ["miskey/**/*.py", "tests/**/*.py", "pyproject.toml"]
exclude = [".venv", "docs", "examples", "**/*_pb2*.py"]

[tool.ruff.lint]
allowed-confusables = ["’"]
select = ["ALL"]
ignore = [
  "A",
  "ANN",
  "ARG",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E402",
  "E712",
  "EM",
  "FIX",
  "N",
  "PLC",
  "PLR",
  "RSE",
  "RUF001",
  "RUF002",
  "RUF012",
  "ERA",
  "S",
  "SLF",
  "TC006",
  "TD",
  "TRY",
  "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ARG001",
  "ASYNC230",
  "B008",
  "PGH",
  "PLR",
  "RUF059",
]
"conftest.py" = [
  "ARG001",
  "F",
  "PGH",
  "PLR",
]
"__init__.py" = ["F403"]
